--- a/package.json
+++ b/package.json
@@ -7,17 +7,21 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@react-three/drei": "^9.56.0",
+    "@react-three/fiber": "9.0.0-alpha.8",
     "@tailwindcss/forms": "^0.5.9",
     "@vercel/postgres": "^0.10.0",
     "autoprefixer": "10.4.20",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
+    "express": "^4.21.2",
     "next": "latest",
     "next-auth": "5.0.0-beta.19",
     "postcss": "8.4.49",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "tailwindcss": "3.4.16",
+    "three": "^0.155.0",
     "typescript": "5.7.2",
     "use-debounce": "^10.0.4",
     "zod": "^3.23.8"
